--- a/src/components/MovieCard/MovieCard.css
+++ b/src/components/MovieCard/MovieCard.css
@@ -1,7 +1,9 @@
 .moviecard{
-    display: flex;
-    margin: 0 auto 50px;
+    display:flex;
+    margin: 20px auto 10px;
     max-width: 45%;
+    box-shadow: 0px 6px 18px rgba(0,0,0,.1);
+    border-radius: 8px;
 }
 
 .movieposter{
@@ -13,6 +15,12 @@
     padding-right: 2%;
 }
 
+h2{
+    text-align: center;
+}
+p{
+    padding: 2px;
+}
 movietext{
     flex: 1 1 auto;
 }
