--- a/src/components/MovieList/MovieList.css
+++ b/src/components/MovieList/MovieList.css
@@ -1,10 +1,16 @@
 .movielist-wrapper{
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
     background-color: aqua;
+    text-align: center;
+    justify-content: center;
 }
+.MovieList-heading{
+    align-items: center;
+    justify-content: center;
+    margin-left: 80px;
+    width: 100%;
+}
+
 
 .search-form{
     margin-bottom: 5%;
@@ -13,4 +19,3 @@
 h1{
     color: black;
 }
-
