--- a/src/components/MovieListNav/MovieListNav.css
+++ b/src/components/MovieListNav/MovieListNav.css
@@ -1,5 +1,11 @@
 .MovieListNav{
     display: inline-block;
+    list-style: none;
     min-width: 150px;
     width: 250px;
+
+}
+
+.MovieListItem{
+    list-style-type: none;
 }
