--- a/src/components/MovieList/MovieList.css
+++ b/src/components/MovieList/MovieList.css
@@ -1,21 +1,34 @@
-.movielist-wrapper{
-    display: flex;
-    background-color: aqua;
-    text-align: center;
-    justify-content: center;
-}
-.MovieList-heading{
-    align-items: center;
-    justify-content: center;
-    margin-left: 80px;
-    width: 100%;
+.movielist-wrapper {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  width: 100%;
 }
 
-
-.search-form{
-    margin-bottom: 5%;
+.MovieList-heading {
+  align-items: center;
+  width: 100%;
 }
 
-h1{
-    color: black;
+/* .sidebar{
+    width: 25%;
+    flex: 1;
+}
+.main-content{
+    width: 75%;
+    flex: 3;
+} */
+:root {
+  --sidebar-width: 100px;
+}
+
+h1 {
+  color: #1D3557;
+}
+.selectedListHeading{
+    color: #457B9D;
+}
+
+.vote-btn{
+    margin-bottom: 8px;
 }
