--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -1,27 +1,27 @@
 .movielist-wrapper{
-    display:flex;
     justify-content: center;
+    align-items: stretch;
+    min-height: 100vh;
     flex-flow: row wrap;
 }
-.App_nav{
-    height: 100%;
-    position: fixed;
-    left: 0;
-    overflow-x: hidden;
-    display: inline-block;
-}
+/* .sidebar{
+    width: 25%;
+    flex: 1;
+} */
+
 .search-content{
     text-align: center;
     justify-content: center;
+    /* width: 75%;
+    flex: 3; */
 }
 
 
 .addmovie-btn{
 display:inline-block;
-padding:0.35em 1.2em;
+padding:0.25em 1em;
 border:0.1em solid #000000;
-margin:0 0.3em 0.3em 20em;
-border-radius:0.12em;
+border-radius:0.2em;
 box-sizing: border-box;
 text-decoration:none;
 font-family:'Roboto',sans-serif;
@@ -38,11 +38,4 @@ background-color:#000000;
 
 p{
     text-align: center;
-}
-
-@media all and (max-width:30em){
-.addmovie-btn{
-display:block;
-margin:0.4em auto;
-}
 }
