--- a/src/components/MovieListNav/MovieListNav.css
+++ b/src/components/MovieListNav/MovieListNav.css
@@ -1,15 +1,15 @@
 .MovieListNav{
-    height: 100%;
+    /* height: 100%; */
     flex-direction: column;
     position: fixed;
     display: inline-block;
     z-index: 1;
     left: 0;
-    overflow-x: hidden;
-    overflow:auto;
+    /* overflow-x: hidden;
+    overflow:auto; */
     justify-content: center;
     
-}
+} 
 
 .MovieListItem{
     list-style-type: none;
@@ -37,3 +37,53 @@
     margin-left: 10px;
 }
 
+/* Position and sizing of burger button */
+.bm-burger-button {
+  position: fixed;
+  width: 36px;
+  height: 30px;
+  left: 36px;
+  top: 36px;
+}
+
+/* Color/shape of burger icon bars */
+.bm-burger-bars {
+  background: #373a47;
+}
+
+/* Color/shape of burger icon bars on hover*/
+.bm-burger-bars-hover {
+  background: #a90000;
+}
+
+/* Position and sizing of clickable cross button */
+.bm-cross-button {
+  height: 24px;
+  width: 24px;
+}
+
+/* Color/shape of close button cross */
+.bm-cross {
+  background: #bdc3c7;
+}
+
+/*
+Sidebar wrapper styles
+Note: Beware of modifying this element as it can break the animations - you should not need to touch it in most cases
+*/
+.bm-menu-wrap {
+  position: fixed;
+  height: 100%;
+}
+
+/* General sidebar styles */
+.bm-menu {
+  background: #F1FAEE;
+  padding: 2.5em 1.5em 0;
+  font-size: 1.15em;
+}
+
+/* Individual item */
+/* .bm-item {
+  display: inline-block;
+} */
