--- a/src/components/MovieListNav/MovieListNav.css
+++ b/src/components/MovieListNav/MovieListNav.css
@@ -1,12 +1,12 @@
 .MovieListNav{
-    /* height: 100%; */
+    height: 100%;
     flex-direction: column;
     position: fixed;
     display: inline-block;
     z-index: 1;
     left: 0;
-    /* overflow-x: hidden;
-    overflow:auto; */
+    overflow-x: hidden;
+    overflow:auto;
     justify-content: center;
     
 } 
@@ -34,7 +34,9 @@
 
 .newList-input{
     display: block;
-    margin-left: 10px;
+    margin-left: 35px;
+    font-size: 16px;
+
 }
 
 /* Position and sizing of burger button */
@@ -87,3 +89,4 @@ Note: Beware of modifying this element as it can break the animations - you shou
 /* .bm-item {
   display: inline-block;
 } */
+.bm-menu { overflow-y: hidden !important; }
