--- a/src/components/MovieListNav/MovieListNav.css
+++ b/src/components/MovieListNav/MovieListNav.css
@@ -36,7 +36,6 @@
     display: block;
     margin-left: 35px;
     font-size: 16px;
-
 }
 
 /* Position and sizing of burger button */
@@ -81,8 +80,8 @@ Note: Beware of modifying this element as it can break the animations - you shou
 /* General sidebar styles */
 .bm-menu {
   background: #F1FAEE;
-  padding: 2.5em 1.5em 0;
-  font-size: 1.15em;
+  padding-top: 2.5em;
+
 }
 
 /* Individual item */
