--- a/src/components/MovieListNav/MovieListNav.css
+++ b/src/components/MovieListNav/MovieListNav.css
@@ -88,4 +88,4 @@ Note: Beware of modifying this element as it can break the animations - you shou
 /* .bm-item {
   display: inline-block;
 } */
-.bm-menu { overflow-y: hidden !important; }
+/* .bm-menu { overflow-y: hidden !important; } */
