--- a/src/components/MovieListNav/MovieListNav.css
+++ b/src/components/MovieListNav/MovieListNav.css
@@ -79,16 +79,26 @@ Note: Beware of modifying this element as it can break the animations - you shou
 
 /* General sidebar styles */
 .bm-menu {
-  background: #F1FAEE;
-  padding-top: 2.5em;
+  background: #373a47;
+  padding: 2.5em 1.5em 0;
+  font-size: 1.15em;
+}
 
+/* Morph shape necessary with bubble or elastic */
+.bm-morph-shape {
+  fill: #373a47;
+}
+
+/* Wrapper for item list */
+.bm-item-list {
+  color: #b8b7ad;
+  padding: 0.8em;
 }
 
 /* Individual item */
-/* .bm-item {
+.bm-item {
   display: inline-block;
-} */
- .bm-menu { overflow-y: hidden !important; } 
+}
 
 /* Styling of overlay */
 .bm-overlay {
