added font size 16

--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -19,7 +19,9 @@
 .search-form{
     font-size: 16px;
 }
-
+.movie-list-select{
+    font-size: 16px;
+}
 .addmovie-btn{
 display:inline-block;
 padding:0.25em 1em;
