--- a/src/components/MovieListNav/MovieListNav.css
+++ b/src/components/MovieListNav/MovieListNav.css
@@ -2,7 +2,6 @@
     list-style-type: none;
     text-decoration: none;
     display: block;
-    padding-bottom: 3px;
     outline: none; 
 }
 .MovieListNav_list-link{
@@ -28,8 +27,10 @@
 
 .newList-input{
     display: block;
-    margin-left: 35px;
+    margin-left: 55px;
     font-size: 16px;
+    text-align: center;
+    margin-bottom: 2%;
 }
 
 /* Position and sizing of burger button */
@@ -86,4 +87,11 @@ Note: Beware of modifying this element as it can break the animations - you shou
 /* Styling of overlay */
 .bm-overlay {
   background: rgba(0, 0, 0, 0.3);
+}
+
+.bm-item MovieListNav_list{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    padding-inline-start: 0px;
 }
