--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -7,3 +7,13 @@
 .App_Main{
     width: 100%;
 }
+
+.toast-notification{
+  width: 80%
+}
+
+@media only screen and (min-width: 768px){
+  .toast-notification{
+    width: 100%
+  }
+}
