--- a/src/components/LoginForm/LoginForm.css
+++ b/src/components/LoginForm/LoginForm.css
@@ -9,11 +9,20 @@
 .Intro{
     width: 200px;
 }
-
+.Intro h1{
+    text-align: center;
+    font-size: 2.1em;
+}
 .Intro h2{
     font-size: 1.2em;
 }
 
 .Intro h3{
     font-size: .8em;
+}
+
+@media screen and (min-width: 768px) {
+    .Intro{
+    width: 500px;
+}
 }
