--- a/src/components/RegistrationForm/RegistrationForm.css
+++ b/src/components/RegistrationForm/RegistrationForm.css
@@ -3,4 +3,10 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
+}
+
+.create-btn{
+    margin-top: 4%;
+    margin-left: 5%;
 }
