--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,6 +4,28 @@
   float: right;
 }
 
+.Header__logged-in, .Header__not-logged-in{
+  display: inline-block;
+  position: relative;
+  padding: 0.25em 1em;
+  border: 0.1em solid #000000;
+  border-radius: 0.2em;
+  box-sizing: border-box;
+  text-decoration: none;
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+  color: #000000;
+  text-align: center;
+  transition: all 0.2s;
+  margin-top: 5%;
+  margin-right: 20px;
+  }
+.Header__logged-in:hover, .Header__not-logged-in:hover{
+  color: #ffffff;
+  background-color: #000000;
+}
+
+
 @media screen and (min-width: 450px) {
   .Header {
     align-items: baseline;
@@ -14,9 +36,5 @@
 
   .Header__not-logged-in {
     flex-direction: row;
-  }
-
-  .Header__not-logged-in .Hyph {
-    display: initial;
   }
 }
