--- a/src/components/MovieListNav/MovieListNav.css
+++ b/src/components/MovieListNav/MovieListNav.css
@@ -57,9 +57,9 @@
 }
 
 /* Color/shape of burger icon bars on hover*/
-.bm-burger-bars-hover {
+/* .bm-burger-bars-hover {
   background: #a90000;
-}
+} */
 
 /* Position and sizing of clickable cross button */
 .bm-cross-button {
