--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -7,18 +7,19 @@
 .Header__logged-in, .Header__not-logged-in{
   display: inline-block;
   position: relative;
-  padding: 0.25em 1em;
+  padding: 0.25em .5em;
   border: 0.1em solid #000000;
   border-radius: 0.2em;
   box-sizing: border-box;
   text-decoration: none;
   font-family: "Roboto", sans-serif;
+  font-size: 10px;
   font-weight: 300;
   color: #000000;
   text-align: center;
   transition: all 0.2s;
   margin-top: 5%;
-  margin-right: 20px;
+  margin-right: 7%;
   }
 .Header__logged-in:hover, .Header__not-logged-in:hover{
   color: #ffffff;
@@ -37,4 +38,22 @@
   .Header__not-logged-in {
     flex-direction: row;
   }
+  .Header__logged-in, .Header__not-logged-in{
+  display: inline-block;
+  position: relative;
+  padding: 0.25em 1em;
+  border: 0.1em solid #000000;
+  border-radius: 0.2em;
+  box-sizing: border-box;
+  text-decoration: none;
+  font-family: "Roboto", sans-serif;
+  font-size: .8rem;
+  font-weight: 300;
+  color: #000000;
+  text-align: center;
+  transition: all 0.2s;
+  margin-top: 5%;
+  margin-right: 20px;
+  }
 }
+
