--- a/src/components/MovieCard/MovieCard.css
+++ b/src/components/MovieCard/MovieCard.css
@@ -7,9 +7,8 @@
 }
 
 .movieposter {
-  min-width: 125px;
-  width: 35%;
-  height: 45%;
+  width: 135px;
+  height: 187px;
   object-fit: contain;
   align-self: flex-start;
   padding-right: 2%;
