--- a/src/components/MovieCard/MovieCard.css
+++ b/src/components/MovieCard/MovieCard.css
@@ -30,8 +30,13 @@ h2 {
   font-size: 0.6em;
   text-align: start;
 }
-p {
+p{
   text-align: left;
+}
+
+.vote-btn:disabled{
+  color:#95A5A6;
+  background-color: #7F8C8D;
 }
 
 /* set media query for desktop view; set the width and height */
