--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -69,3 +69,12 @@ h1{
 p {
   text-align: center;
 }
+
+
+
+@media only screen 
+  and (min-device-width: 1200px) {
+  h1{
+    margin-left: 5%;
+}
+}
